src/main/java/richTea/antlr/RichTeaParser.java
// $ANTLR 3.4 C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g 2012-07-17 14:41:49
package richTea.antlr;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class RichTeaParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARRAY", "ASSIGN", "AT", "ATTRIBUTE", "ATTRIBUTES", "BOOLEAN", "BRANCH", "BRANCHES", "CHILDREN", "CLOSE_BOX", "CLOSE_BRACE", "CLOSE_PAREN", "COLON", "COMMA", "COMMENT", "DIVIDE", "DIVIDE_EQUALS", "EQ", "ESC_SEQ", "EXECUTABLE_FUNCTION_ATTRIBUTE", "FLOAT", "FUNCTION", "GT", "GTEQ", "HASH", "ID", "INTEGER", "LAST_RETURNED_VALUE", "LETTER", "LT", "LTEQ", "MINUS", "MINUS_EQUALS", "MODULUS", "MULTIPLY", "MULTIPLY_EQUALS", "NAME", "NATIVE_METHOD_CALL", "NEGATE", "NEQ", "NOT", "NUMBER", "OPEN_BOX", "OPEN_BRACE", "OPEN_PAREN", "OR", "PERIOD", "PLUS", "PLUS_EQUALS", "POWER", "PROPERTY_LOOKUP", "QUESTION_MARK", "SEMI_COLON", "STRING", "TERNARY_OPERATOR", "UNDERSCORE", "VALUE", "VARIABLE", "WHITESPACE"
    };

    public static final int EOF=-1;
    public static final int AND=4;
    public static final int ARRAY=5;
    public static final int ASSIGN=6;
    public static final int AT=7;
    public static final int ATTRIBUTE=8;
    public static final int ATTRIBUTES=9;
    public static final int BOOLEAN=10;
    public static final int BRANCH=11;
    public static final int BRANCHES=12;
    public static final int CHILDREN=13;
    public static final int CLOSE_BOX=14;
    public static final int CLOSE_BRACE=15;
    public static final int CLOSE_PAREN=16;
    public static final int COLON=17;
    public static final int COMMA=18;
    public static final int COMMENT=19;
    public static final int DIVIDE=20;
    public static final int DIVIDE_EQUALS=21;
    public static final int EQ=22;
    public static final int ESC_SEQ=23;
    public static final int EXECUTABLE_FUNCTION_ATTRIBUTE=24;
    public static final int FLOAT=25;
    public static final int FUNCTION=26;
    public static final int GT=27;
    public static final int GTEQ=28;
    public static final int HASH=29;
    public static final int ID=30;
    public static final int INTEGER=31;
    public static final int LAST_RETURNED_VALUE=32;
    public static final int LETTER=33;
    public static final int LT=34;
    public static final int LTEQ=35;
    public static final int MINUS=36;
    public static final int MINUS_EQUALS=37;
    public static final int MODULUS=38;
    public static final int MULTIPLY=39;
    public static final int MULTIPLY_EQUALS=40;
    public static final int NAME=41;
    public static final int NATIVE_METHOD_CALL=42;
    public static final int NEGATE=43;
    public static final int NEQ=44;
    public static final int NOT=45;
    public static final int NUMBER=46;
    public static final int OPEN_BOX=47;
    public static final int OPEN_BRACE=48;
    public static final int OPEN_PAREN=49;
    public static final int OR=50;
    public static final int PERIOD=51;
    public static final int PLUS=52;
    public static final int PLUS_EQUALS=53;
    public static final int POWER=54;
    public static final int PROPERTY_LOOKUP=55;
    public static final int QUESTION_MARK=56;
    public static final int SEMI_COLON=57;
    public static final int STRING=58;
    public static final int TERNARY_OPERATOR=59;
    public static final int UNDERSCORE=60;
    public static final int VALUE=61;
    public static final int VARIABLE=62;
    public static final int WHITESPACE=63;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public RichTeaParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public RichTeaParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return RichTeaParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
    // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:22:1: program : function ;
    public final RichTeaParser.program_return program() throws RecognitionException {
        RichTeaParser.program_return retval = new RichTeaParser.program_return();
        retval.start = input.LT(1);


        Tree root_0 = null;

        RichTeaParser.function_return function1 =null;



        try {
            // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:23:2: ( function )
            // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:23:5: function
            {
            root_0 = (Tree)adaptor.nil();


            pushFollow(FOLLOW_function_in_program148);
            function1=function();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, function1.getTree());

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "program"


    public static class function_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "function"
    // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:26:1: function : ( ID OPEN_PAREN ( function_data )? CLOSE_PAREN ( SEMI_COLON )? -> ^( FUNCTION ^( NAME ID ) ( function_data )? ) | OPEN_PAREN ( function_data )? CLOSE_PAREN ( SEMI_COLON )? -> ^( FUNCTION ^( NAME ID[\"scope\"] ) ( function_data )? ) );
    public final RichTeaParser.function_return function() throws RecognitionException {
        RichTeaParser.function_return retval = new RichTeaParser.function_return();
        retval.start = input.LT(1);


        Tree root_0 = null;

        Token ID2=null;
        Token OPEN_PAREN3=null;
        Token CLOSE_PAREN5=null;
        Token SEMI_COLON6=null;
        Token OPEN_PAREN7=null;
        Token CLOSE_PAREN9=null;
        Token SEMI_COLON10=null;
        RichTeaParser.function_data_return function_data4 =null;

        RichTeaParser.function_data_return function_data8 =null;


        Tree ID2_tree=null;
        Tree OPEN_PAREN3_tree=null;
        Tree CLOSE_PAREN5_tree=null;
        Tree SEMI_COLON6_tree=null;
        Tree OPEN_PAREN7_tree=null;
        Tree CLOSE_PAREN9_tree=null;
        Tree SEMI_COLON10_tree=null;
        RewriteRuleTokenStream stream_OPEN_PAREN=new RewriteRuleTokenStream(adaptor,"token OPEN_PAREN");
        RewriteRuleTokenStream stream_SEMI_COLON=new RewriteRuleTokenStream(adaptor,"token SEMI_COLON");
        RewriteRuleTokenStream stream_CLOSE_PAREN=new RewriteRuleTokenStream(adaptor,"token CLOSE_PAREN");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_function_data=new RewriteRuleSubtreeStream(adaptor,"rule function_data");
        try {
            // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:27:2: ( ID OPEN_PAREN ( function_data )? CLOSE_PAREN ( SEMI_COLON )? -> ^( FUNCTION ^( NAME ID ) ( function_data )? ) | OPEN_PAREN ( function_data )? CLOSE_PAREN ( SEMI_COLON )? -> ^( FUNCTION ^( NAME ID[\"scope\"] ) ( function_data )? ) )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ID) ) {
                alt5=1;
            }
            else if ( (LA5_0==OPEN_PAREN) ) {
                alt5=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:27:4: ID OPEN_PAREN ( function_data )? CLOSE_PAREN ( SEMI_COLON )?
                    {
                    ID2=(Token)match(input,ID,FOLLOW_ID_in_function160); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID2);


                    OPEN_PAREN3=(Token)match(input,OPEN_PAREN,FOLLOW_OPEN_PAREN_in_function162); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_OPEN_PAREN.add(OPEN_PAREN3);


                    // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:27:18: ( function_data )?
                    int alt1=2;
                    int LA1_0 = input.LA(1);

                    if ( (LA1_0==AT||LA1_0==BOOLEAN||LA1_0==COMMA||(LA1_0 >= HASH && LA1_0 <= ID)||LA1_0==MINUS||(LA1_0 >= NOT && LA1_0 <= OPEN_PAREN)||LA1_0==STRING||LA1_0==UNDERSCORE) ) {
                        alt1=1;
                    }
                    else if ( (LA1_0==CLOSE_PAREN) ) {
                        int LA1_14 = input.LA(2);

                        if ( (synpred1_RichTea()) ) {
                            alt1=1;
                        }
                    }
                    switch (alt1) {
                        case 1 :
                            // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:27:18: function_data
                            {
                            pushFollow(FOLLOW_function_data_in_function164);
                            function_data4=function_data();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) stream_function_data.add(function_data4.getTree());

                            }
                            break;

                    }


                    CLOSE_PAREN5=(Token)match(input,CLOSE_PAREN,FOLLOW_CLOSE_PAREN_in_function167); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_CLOSE_PAREN.add(CLOSE_PAREN5);


                    // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:27:45: ( SEMI_COLON )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==SEMI_COLON) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:27:45: SEMI_COLON
                            {
                            SEMI_COLON6=(Token)match(input,SEMI_COLON,FOLLOW_SEMI_COLON_in_function169); if (state.failed) return retval; 
                            if ( state.backtracking==0 ) stream_SEMI_COLON.add(SEMI_COLON6);


                            }
                            break;

                    }


                    // AST REWRITE
                    // elements: ID, function_data
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Tree)adaptor.nil();
                    // 28:4: -> ^( FUNCTION ^( NAME ID ) ( function_data )? )
                    {
                        // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:28:7: ^( FUNCTION ^( NAME ID ) ( function_data )? )
                        {
                        Tree root_1 = (Tree)adaptor.nil();
                        root_1 = (Tree)adaptor.becomeRoot(
                        (Tree)adaptor.create(FUNCTION, "FUNCTION")
                        , root_1);

                        // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:28:18: ^( NAME ID )
                        {
                        Tree root_2 = (Tree)adaptor.nil();
                        root_2 = (Tree)adaptor.becomeRoot(
                        (Tree)adaptor.create(NAME, "NAME")
                        , root_2);

                        adaptor.addChild(root_2, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_1, root_2);
                        }

                        // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:28:29: ( function_data )?
                        if ( stream_function_data.hasNext() ) {
                            adaptor.addChild(root_1, stream_function_data.nextTree());

                        }
                        stream_function_data.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;
                case 2 :
                    // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:29:4: OPEN_PAREN ( function_data )? CLOSE_PAREN ( SEMI_COLON )?
                    {
                    OPEN_PAREN7=(Token)match(input,OPEN_PAREN,FOLLOW_OPEN_PAREN_in_function193); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_OPEN_PAREN.add(OPEN_PAREN7);


                    // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:29:15: ( function_data )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==AT||LA3_0==BOOLEAN||LA3_0==COMMA||(LA3_0 >= HASH && LA3_0 <= ID)||LA3_0==MINUS||(LA3_0 >= NOT && LA3_0 <= OPEN_PAREN)||LA3_0==STRING||LA3_0==UNDERSCORE) ) {
                        alt3=1;
                    }
                    else if ( (LA3_0==CLOSE_PAREN) ) {
                        int LA3_14 = input.LA(2);

                        if ( (synpred4_RichTea()) ) {
                            alt3=1;
                        }
                    }
                    switch (alt3) {
                        case 1 :
                            // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:29:15: function_data
                            {
                            pushFollow(FOLLOW_function_data_in_function195);
                            function_data8=function_data();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) stream_function_data.add(function_data8.getTree());

                            }
                            break;

                    }


                    CLOSE_PAREN9=(Token)match(input,CLOSE_PAREN,FOLLOW_CLOSE_PAREN_in_function198); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_CLOSE_PAREN.add(CLOSE_PAREN9);


                    // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:29:42: ( SEMI_COLON )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==SEMI_COLON) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:29:42: SEMI_COLON
                            {
                            SEMI_COLON10=(Token)match(input,SEMI_COLON,FOLLOW_SEMI_COLON_in_function200); if (state.failed) return retval; 
                            if ( state.backtracking==0 ) stream_SEMI_COLON.add(SEMI_COLON10);


                            }
                            break;

                    }


                    // AST REWRITE
                    // elements: function_data
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Tree)adaptor.nil();
                    // 30:4: -> ^( FUNCTION ^( NAME ID[\"scope\"] ) ( function_data )? )
                    {
                        // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:30:7: ^( FUNCTION ^( NAME ID[\"scope\"] ) ( function_data )? )
                        {
                        Tree root_1 = (Tree)adaptor.nil();
                        root_1 = (Tree)adaptor.becomeRoot(
                        (Tree)adaptor.create(FUNCTION, "FUNCTION")
                        , root_1);

                        // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:30:18: ^( NAME ID[\"scope\"] )
                        {
                        Tree root_2 = (Tree)adaptor.nil();
                        root_2 = (Tree)adaptor.becomeRoot(
                        (Tree)adaptor.create(NAME, "NAME")
                        , root_2);

                        adaptor.addChild(root_2, 
                        (Tree)adaptor.create(ID, "scope")
                        );

                        adaptor.addChild(root_1, root_2);
                        }

                        // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:30:38: ( function_data )?
                        if ( stream_function_data.hasNext() ) {
                            adaptor.addChild(root_1, stream_function_data.nextTree());

                        }
                        stream_function_data.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "function"


    public static class function_data_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "function_data"
    // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:33:1: function_data : attribute_list branch_list ;
    public final RichTeaParser.function_data_return function_data() throws RecognitionException {
        RichTeaParser.function_data_return retval = new RichTeaParser.function_data_return();
        retval.start = input.LT(1);


        Tree root_0 = null;

        RichTeaParser.attribute_list_return attribute_list11 =null;

        RichTeaParser.branch_list_return branch_list12 =null;



        try {
            // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:34:2: ( attribute_list branch_list )
            // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:34:4: attribute_list branch_list
            {
            root_0 = (Tree)adaptor.nil();


            pushFollow(FOLLOW_attribute_list_in_function_data231);
            attribute_list11=attribute_list();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, attribute_list11.getTree());

            pushFollow(FOLLOW_branch_list_in_function_data233);
            branch_list12=branch_list();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, branch_list12.getTree());

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "function_data"


    public static class attribute_list_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "attribute_list"
    // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:37:1: attribute_list : (attributes+= implicit_attribute )? ( ( COMMA )? attributes+= attribute )* -> ^( ATTRIBUTES ( ^( ATTRIBUTE $attributes) )* ) ;
    public final RichTeaParser.attribute_list_return attribute_list() throws RecognitionException {
        RichTeaParser.attribute_list_return retval = new RichTeaParser.attribute_list_return();
        retval.start = input.LT(1);


        Tree root_0 = null;

        Token COMMA13=null;
        List list_attributes=null;
        RuleReturnScope attributes = null;
        Tree COMMA13_tree=null;
        RewriteRuleTokenStream stream_COMMA=new RewriteRuleTokenStream(adaptor,"token COMMA");
        RewriteRuleSubtreeStream stream_implicit_attribute=new RewriteRuleSubtreeStream(adaptor,"rule implicit_attribute");
        RewriteRuleSubtreeStream stream_attribute=new RewriteRuleSubtreeStream(adaptor,"rule attribute");
        try {
            // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:38:2: ( (attributes+= implicit_attribute )? ( ( COMMA )? attributes+= attribute )* -> ^( ATTRIBUTES ( ^( ATTRIBUTE $attributes) )* ) )
            // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:38:4: (attributes+= implicit_attribute )? ( ( COMMA )? attributes+= attribute )*
            {
            // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:38:14: (attributes+= implicit_attribute )?
            int alt6=2;
            switch ( input.LA(1) ) {
                case AT:
                case BOOLEAN:
                case MINUS:
                case NOT:
                case NUMBER:
                case OPEN_BOX:
                case OPEN_PAREN:
                case UNDERSCORE:
                    {
                    alt6=1;
                    }
                    break;
                case STRING:
                    {
                    int LA6_4 = input.LA(2);

                    if ( (LA6_4==EOF||LA6_4==AND||LA6_4==CLOSE_PAREN||LA6_4==COMMA||(LA6_4 >= DIVIDE && LA6_4 <= EQ)||(LA6_4 >= GT && LA6_4 <= ID)||(LA6_4 >= LT && LA6_4 <= MULTIPLY_EQUALS)||LA6_4==NEQ||LA6_4==OR||(LA6_4 >= PLUS && LA6_4 <= POWER)||LA6_4==QUESTION_MARK||LA6_4==STRING) ) {
                        alt6=1;
                    }
                    else if ( (LA6_4==OPEN_BRACE) ) {
                        int LA6_27 = input.LA(3);

                        if ( (synpred6_RichTea()) ) {
                            alt6=1;
                        }
                    }
                    }
                    break;
                case ID:
                    {
                    int LA6_6 = input.LA(2);

                    if ( (LA6_6==EOF||LA6_6==AND||LA6_6==CLOSE_PAREN||LA6_6==COMMA||(LA6_6 >= DIVIDE && LA6_6 <= EQ)||(LA6_6 >= GT && LA6_6 <= ID)||(LA6_6 >= LT && LA6_6 <= MULTIPLY_EQUALS)||LA6_6==NEQ||(LA6_6 >= OPEN_PAREN && LA6_6 <= POWER)||LA6_6==QUESTION_MARK||LA6_6==STRING) ) {
                        alt6=1;
                    }
                    else if ( (LA6_6==OPEN_BRACE) ) {
                        int LA6_44 = input.LA(3);

                        if ( (synpred6_RichTea()) ) {
                            alt6=1;
                        }
                    }
                    }
                    break;
            }

            switch (alt6) {
                case 1 :
                    // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:38:14: attributes+= implicit_attribute
                    {
                    pushFollow(FOLLOW_implicit_attribute_in_attribute_list248);
                    attributes=implicit_attribute();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_implicit_attribute.add(attributes.getTree());
                    if (list_attributes==null) list_attributes=new ArrayList();
                    list_attributes.add(attributes.getTree());


                    }
                    break;

            }


            // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:38:36: ( ( COMMA )? attributes+= attribute )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==COMMA) ) {
                    int LA8_3 = input.LA(2);

                    if ( (LA8_3==ID) ) {
                        int LA8_9 = input.LA(3);

                        if ( (synpred8_RichTea()) ) {
                            alt8=1;
                        }


                    }


                }
                else if ( (LA8_0==ID) ) {
                    int LA8_4 = input.LA(2);

                    if ( (LA8_4==ASSIGN||LA8_4==COLON) ) {
                        alt8=1;
                    }


                }


                switch (alt8) {
            	case 1 :
            	    // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:38:37: ( COMMA )? attributes+= attribute
            	    {
            	    // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:38:37: ( COMMA )?
            	    int alt7=2;
            	    int LA7_0 = input.LA(1);

            	    if ( (LA7_0==COMMA) ) {
            	        alt7=1;
            	    }
            	    switch (alt7) {
            	        case 1 :
            	            // C:\\Users\\richard.walton\\Documents\\Other\\RichTea\\antlr\\RichTea.g:38:37: COMMA
            	            {
            	            COMMA13=(Token)match(input,COMMA,FOLLOW_COMMA_in_attribute_list252); if (state.failed) return retval; 
            	            if ( state.backtracking==0 ) stream_COMMA.add(COMMA13);


            	            }
            	            break;

            	    }


            	    pushFollow(FOLLOW_attribute_in_attribute_list257);
            	    attributes=attribute();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_attribute.add(attributes.getTree());
            	    if (list_attributes==null) list_attributes=new ArrayList();
            	    list_attributes.add(attributes.getTree());


            	    }
            	    break;
